Disable double-tap-to-zoom

--- a/app/static/workspace.less
+++ b/app/static/workspace.less
@@ -10,6 +10,7 @@ body {
   font-size: @font-size;
   line-height: @line-height-base;
   -webkit-font-smoothing: antialiased;
+  touch-action: manipulation;
 }
 
 nylas-workspace {
