Restore Windows swipe to archive #109

--- a/app/static/components/scroll-region.less
+++ b/app/static/components/scroll-region.less
@@ -53,6 +53,7 @@
     width: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
+    touch-action: pan-y;
     z-index: 1; // Important so that content does not repaint with container
   }
 
