Add support for “x NOT y” to the search bar, omit trash and spam results by default #1605

--- a/app/static/style/buttons.less
+++ b/app/static/style/buttons.less
@@ -78,9 +78,13 @@ body.platform-win32 {
   &:active {
     cursor: default;
     background: darken(@btn-default-bg-color, 9%);
+    color: @btn-default-text-color;
   }
   &:focus {
     outline: none;
+  }
+  &:hover {
+    color: @btn-default-text-color;
   }
 
   font-size: @font-size-small;
