--- a/app/internal_packages/send-reminders/styles/send-reminders.less
+++ b/app/internal_packages/send-reminders/styles/send-reminders.less
@@ -47,13 +47,19 @@
 
 .send-reminders-header {
   color: @reminders-color;
-  background: linear-gradient(to bottom, #fbfafe 0%, #fff 25%);
+  background: linear-gradient(to bottom, #eee8ff 0%, #fff 25%);
   padding-top: 13px;
+  padding-left: 20px;
   padding-bottom: 10px;
   cursor: default;
   margin-top: -19px;
   margin-bottom: 15px;
+  margin-left: -20px;
+  margin-right: -20px;
   border-bottom: 1px solid #e7e1fb;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+
   img {
     background-color: @reminders-color;
     margin-top: -6px;
