--- a/app/internal_packages/send-reminders/styles/send-reminders.less
+++ b/app/internal_packages/send-reminders/styles/send-reminders.less
@@ -48,17 +48,12 @@
 .send-reminders-header {
   color: @reminders-color;
   background: linear-gradient(to bottom, #eee8ff 0%, #fff 25%);
-  padding-top: 13px;
-  padding-left: 20px;
-  padding-bottom: 10px;
-  cursor: default;
-  margin-top: -19px;
-  margin-bottom: 15px;
-  margin-left: -20px;
-  margin-right: -20px;
+  padding: 13px 0 10px 20px;
+  margin: -19px -20px 15px -20px;
   border-bottom: 1px solid #e7e1fb;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
+  cursor: default;
 
   img {
     background-color: @reminders-color;
